--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node ssr-server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "next": "^10.0.0",
+    "pipedrive": "^10.4.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
