--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "next": "^10.0.0",
+    "next": "^10.0.9",
     "pipedrive": "^10.4.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "browser": {
     "fs": false,
